--- a/style.css
+++ b/style.css
@@ -156,4 +156,15 @@ h1 {
     font-size: 16px;
     line-height: 20px;
     color: #fb6d3a;
+    margin-bottom: 11px;
+}
+.field-of-study {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 12px;
+}
+
+.experience {
+    margin-bottom: 51px;
 }
