--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ aside {
 
 .cv-photo {
     margin-top: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 .header-secondary {
@@ -36,7 +40,7 @@ aside {
 }
 
 .list-secondary {
-    color: #fb6d3a;
+    color: #078787;
     font-size: 14px;
     line-height: 24px;
     margin-left: 0px;
@@ -82,7 +86,8 @@ main {
 
 .job-title {
     font-weight: 700;
-    font-size: 14px;
+    font-size: 19px;
+    color: #078787;
     line-height: 17px;
 }
 h1 {
@@ -133,7 +138,8 @@ h1 {
 }
 
 .highlight {
-    color: #fb6d3a;
+    margin-left: 5px;
+    color: #078787;
 }
 
 .job-date {
@@ -155,7 +161,7 @@ h1 {
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
-    color: #fb6d3a;
+    color: #078787;
     margin-bottom: 11px;
 }
 .field-of-study {
@@ -167,4 +173,10 @@ h1 {
 
 .experience {
     margin-bottom: 51px;
+}
+
+.project-desc {
+    font-weight: 500;
+    margin-bottom: 10px;
+    color: #078787;
 }
